--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <h1>Hello Web Design World</h1>
+    <h1>Hello Web Design World</h1>    <h2>Lara Lascolla</h2>
     <p>This is a starter project using GitHub and basic HTML.</p>
     <figure>
       <img
